<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    android:padding="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/relative"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_alignParentStart="true"
                android:foreground="?android:attr/selectableItemBackground"
                android:src="@mipmap/ic_launcher" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginLeft="32dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif"
                    android:text="@string/nama_sekolah"
                    android:textAlignment="center"
                    android:textSize="32sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/alamat_sekolah"
                    android:textAlignment="textStart"
                    android:textSize="16sp" />

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <View
                android:id="@+id/view2"
                android:layout_width="match_parent"
                android:layout_height="3dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:background="@color/black" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginTop="12dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvPengumuman"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="6dp"
                    android:background="@drawable/backtext"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:padding="6dp"
                    android:text="@string/pengumuman"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/tvAbsensi"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/backtext"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:padding="6dp"
                    android:text="@string/absensi"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/tvPembayaran"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="6dp"
                    android:background="@drawable/backtext"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:padding="6dp"
                    android:text="@string/pembayaran"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="16sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvTunggakan"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="6dp"
                    android:background="@drawable/backtext"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:padding="6dp"
                    android:text="@string/tunggakan"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/tvScanBarcode"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/backtext"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:padding="6dp"
                    android:text="@string/scan_barcode"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/tvLogout"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="6dp"
                    android:background="@drawable/backtext"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:padding="6dp"
                    android:text="@string/logout"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="16sp" />
            </LinearLayout>
        </LinearLayout>

        <FrameLayout
            android:id="@+id/fragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="6dp" />
    </LinearLayout>

</ScrollView>